chore: update scripts

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "check-types": "tsc -b",
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "yarn check-types && next build",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky",
