feat: responsive header component

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@headlessui/react": "^2.2.0",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
