--- a/package.json
+++ b/package.json
@@ -12,21 +12,19 @@
     "format": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
     "add": "^2.0.6",
-    "better-sqlite3": "^11.8.1",
     "next": "15.1.7",
+    "pg": "^8.13.3",
     "react": "^19.0.0",
-    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-responsive": "^10.0.0",
-    "sqlite": "^5.1.1",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^20",
+    "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
