--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "add": "^2.0.6",
+    "csv-parser": "^3.2.0",
     "next": "15.1.7",
     "pg": "^8.13.3",
     "react": "^19.0.0",
